--- a/src/pug/includes/_header.pug
+++ b/src/pug/includes/_header.pug
@@ -1,56 +1,56 @@
 include _mixins.pug
 
 +nav-menu
-.mob-menu
-	.modal-menu
-		.modal-menu-inner
-			button.modal-menu__close-btn.js-menu
-				+icon('close')
-			.modal-menu__header
-				a.header-logo(href="/")
-					span.header-logo__icon
-						+icon('velcom-logo')
-					span.header-logo__text DataCenter
-			.modal-menu-body
-				.modal-menu__nav
-					.modal-menu__menu
-						a(href="#") Главная
-						a(href="#") Приватность информации
-						a(href="#") Наши клиенты и проекты
-						a(href="#") Партнёры
-						a(href="#") Контакты
-					.modal-menu__menu.modal-menu__menu_lvl
-						a(href="#") Дата-центр
-						.modal-menu__sub-menu
-							a(href="#").text-primary Команда
-							a(href="#").text-primary Документы
-							a(href="#").text-primary Сертификаты
-							a(href="#").text-primary Инфраструктура
-							a(href="#").text-primary Новости
-							a(href="#").text-primary Галерея
-					.modal-menu__menu.modal-menu__menu_lvl
-						a(href="#") Услуги
-						.modal-menu__sub-menu
-							a(href="#").text-primary Co-location
-							a(href="#").text-primary Выделенный сервер
-							a(href="#").text-primary IaaS
-				.modal-menu__contacts
-					.modal-menu__info
-						p.text-small.modal-menu__c-title Справочно-информационная служба
-						p.modal-menu__link-wrap
-							a(href="tel:+375 29 600 04 11") +375 29 600 04 11
-							| , доб.&nbsp;6
-						p.modal-menu__mail-wrap
-							a(href="mailto:info@velcom.by") info@velcom.by
-						p.text-small.modal-menu__c-title_inner Тел./факс
-						p.modal-menu__link-wrap
-							a(href="tel:+375 29 600 04 12") +375 29 600 04 12
-					.modal-menu__info.modal-menu__info_lvl
-						p.text-small.modal-menu__c-title Техническая поддержка
-						p.modal-menu__link-wrap
-							a(href="tel:+375 29 600 20 20") +375 29 600 20 20
-						p.modal-menu__link-wrap
-							a(href="tel:+375 29 600 20 20") +375 29 600 20 20
-						p.modal-menu__mail-wrap
-							a(href="mailto:support@velcom.by") support@velcom.by
-					.modal-menu__info.modal-menu__info_empty
+//- .mob-menu
+//- 	.modal-menu
+//- 		.modal-menu-inner
+//- 			button.modal-menu__close-btn.js-menu
+//- 				+icon('close')
+//- 			.modal-menu__header
+//- 				a.header-logo(href="/")
+//- 					span.header-logo__icon
+//- 						+icon('velcom-logo')
+//- 					span.header-logo__text DataCenter
+//- 			.modal-menu-body
+//- 				.modal-menu__nav
+//- 					.modal-menu__menu
+//- 						a(href="#") Главная
+//- 						a(href="#") Приватность информации
+//- 						a(href="#") Наши клиенты и проекты
+//- 						a(href="#") Партнёры
+//- 						a(href="#") Контакты
+//- 					.modal-menu__menu.modal-menu__menu_lvl
+//- 						a(href="#") Дата-центр
+//- 						.modal-menu__sub-menu
+//- 							a(href="#").text-primary Команда
+//- 							a(href="#").text-primary Документы
+//- 							a(href="#").text-primary Сертификаты
+//- 							a(href="#").text-primary Инфраструктура
+//- 							a(href="#").text-primary Новости
+//- 							a(href="#").text-primary Галерея
+//- 					.modal-menu__menu.modal-menu__menu_lvl
+//- 						a(href="#") Услуги
+//- 						.modal-menu__sub-menu
+//- 							a(href="#").text-primary Co-location
+//- 							a(href="#").text-primary Выделенный сервер
+//- 							a(href="#").text-primary IaaS
+//- 				.modal-menu__contacts
+//- 					.modal-menu__info
+//- 						p.text-small.modal-menu__c-title Справочно-информационная служба
+//- 						p.modal-menu__link-wrap
+//- 							a(href="tel:+375 29 600 04 11") +375 29 600 04 11
+//- 							| , доб.&nbsp;6
+//- 						p.modal-menu__mail-wrap
+//- 							a(href="mailto:info@velcom.by") info@velcom.by
+//- 						p.text-small.modal-menu__c-title_inner Тел./факс
+//- 						p.modal-menu__link-wrap
+//- 							a(href="tel:+375 29 600 04 12") +375 29 600 04 12
+//- 					.modal-menu__info.modal-menu__info_lvl
+//- 						p.text-small.modal-menu__c-title Техническая поддержка
+//- 						p.modal-menu__link-wrap
+//- 							a(href="tel:+375 29 600 20 20") +375 29 600 20 20
+//- 						p.modal-menu__link-wrap
+//- 							a(href="tel:+375 29 600 20 20") +375 29 600 20 20
+//- 						p.modal-menu__mail-wrap
+//- 							a(href="mailto:support@velcom.by") support@velcom.by
+//- 					.modal-menu__info.modal-menu__info_empty
