--- a/src/pug/3-2service-inner.pug
+++ b/src/pug/3-2service-inner.pug
@@ -49,7 +49,8 @@ block content
 					.side-bar-banner.js-stick
 						+link-banner('Узнать больше и заказать наши услуги', 'Перейти к услугам', 'side-banner-1.jpg')
 				.content-inner
-					form(action="#").services-config
+					form(action="#").services-config.js-validate
+						.services-config-inner
 						h3.h3 Предлагаем вам воспользоваться стандартными конфигурациями:
 						.services-config-wrap
 							.accordeon-wrapper
@@ -336,7 +337,117 @@ block content
 									a(href="#")
 										strong форму обратной связи
 									|, и консультант свяжется с вами для разработки индивидуального предложения
-
-						.services-form
-							.h2 Форма заказа услуги
-						+link-more('Вернуться к услугам', 'back-link')
+						hr
+						.services-config-inner
+						.form-block.fade-down
+							.form-block__head
+								.h2.form-block__title Форма заказа услуги
+								.text-small Заполните форму и мы перезвоним вам в течение 
+									strong 30 минут
+							.form-block__body
+								hr.form-content-devider
+								.form-content
+									.form-content-head Контактные данные
+									.input-row
+										.input-item.w100
+											.input-wrapper
+												input.input-main(
+													type="text",
+													data-validation="required",
+													data-validation-error-msg="Поле обязательно для заполнения",
+													name="clieentName",
+													id="clieentName"
+												)
+												label.input-label(for="clieentName") ФИО*
+										.input-item.w50
+											.input-wrapper
+												input.input-main(
+													type="phone",
+													data-validation="custom",
+													data-validation-regexp="^[-0-9()+ ]+$",
+													data-validation-error-msg="Введите корректный номер телефона",
+													name="clieentPhone",
+													id="clieentPhone")
+												label.input-label(for="clieentPhone") Телефон*
+										.input-item.w50
+											.input-wrapper
+												input.input-main(
+													type="text",
+													data-validation="email",
+													data-validation-error-msg="Введите корректный e-mail",
+													name="clieentEmail",
+													id="clieentEmail"
+												)
+												label.input-label(for="clieentEmail") Email*
+								hr.form-content-devider
+								.form-content
+									.form-content-head Тема обращения
+									.input-row
+										.input-item.w100
+											.input-wrapper
+												.select-check.js-select-custom
+													.select-carret
+														+icon('arrow_down')
+													button.selects.dropdown(data-placeholder='Категория вопроса *')
+														span.btn-text Категория вопроса *
+													.dropdown-target
+														.dropdown-inner
+															.dropdown-content
+																.select-u-body.select-list
+																	label.option
+																		input(
+																			type='radio',
+																			name='yeats',
+																			value='Категория вопроса 1',
+																			data-validation="required",
+																			data-validation-error-msg="Выберите тему обращения"
+																			)
+																		span Категория вопроса 1
+																	label.option
+																		input(
+																			type='radio',
+																			name='yeats',
+																			value='Категория вопроса 2',
+																			data-validation="required",
+																			data-validation-error-msg="Выберите тему обращения"
+																			)
+																		span Категория вопроса 2
+																	label.option
+																		input(
+																			type='radio',
+																			name='yeats',
+																			value='Категория вопроса 3',
+																			data-validation="required",
+																			data-validation-error-msg="Выберите тему обращения"
+																			)
+																		span Категория вопроса 3
+																	label.option
+																		input(
+																			type='radio',
+																			name='yeats',
+																			value='Категория вопроса 4',
+																			data-validation="required",
+																			data-validation-error-msg="Выберите тему обращения"
+																			)
+																		span Категория вопроса 4
+										.input-item.w100
+											.input-wrapper
+												textarea.input-main(
+													type="text",
+													rows="9",
+													data-validation="required")
+												label.input-label Вопрос *
+							.form-block__footer
+								.input-row
+									.input-item.w100
+										label.check-label
+											input(
+												type="checkbox",
+												data-trigger="btn-submit")
+											.check-label__custom
+												.check-label__checked
+													+icon('checked')
+											| Даю согласие на обработку моих 
+											a(href="#") персональных данных
+								button.button-submit.disabled-field(type="submit", data-target="btn-submit", value="Оставить заявку") Оставить заявку
+					+link-more('Вернуться к услугам', 'back-link')
