--- a/src/sass/_footer.sass
+++ b/src/sass/_footer.sass
@@ -12,18 +12,26 @@ footer
 		flex-wrap: wrap
 	&__nav
 		padding-left: 70px
-		box-sizing: border-box
-		+r(980)
-			padding-left: 35px
+		box-sizing: border-box	
 	&__wrap
 		display: flex
 		width: 50%
 		flex-wrap: wrap
 		align-content: flex-start
+	+r(980)
+		&__nav
+			padding-left: 35px
+	+r(850)
+		&__nav
+			margin-top: 30px
+			padding-left: 0
 	+r(590)
 		padding-top: 47px
 		&__wrap
 			width: 100%
+		&__nav
+			margin-top: 0
+			padding-left: 20px
 
 .footer-contacts
 	width: 50%
@@ -74,14 +82,14 @@ footer
 			flex-direction: column
 			width: auto
 
-.footer-lang
-	width: 48px
-	display: inline-block
-	border-radius: 50%
-	background-color: #f4f4f4
-	font-size: 14px
-	line-height: 48px
-	text-align: center
+// .footer-lang
+// 	width: 48px
+// 	display: inline-block
+// 	border-radius: 50%
+// 	background-color: #f4f4f4
+// 	font-size: 14px
+// 	line-height: 48px
+// 	text-align: center
 
 .footer-social
 	display: flex
