--- a/src/sass/_inputs.sass
+++ b/src/sass/_inputs.sass
@@ -1,14 +1,17 @@
 .form-block
-	padding: 50px 0 0 0
-	max-width: 714px
+	padding: 40px 0 0 0
+	width: 100%
 	background-color: #f5f5f5
-	&-head
+	&__head
 		padding: 0 34px
-	&-body
+	&__body
 		padding: 0 34px
-	&-footer
-		padding: 33px 34px 102px 34px
+	&__footer
+		margin-top: 10px
+		padding: 33px 34px 60px 34px
 		background-color: #eeeeee
+	&__title
+		margin-bottom: 20px
 .form-content
 	.form-content-head
 		font-size: 16px
@@ -20,7 +23,7 @@
 		width: 100%
 		height: 1px
 		background-color: #cccccc
-		margin-top: 15px
+		margin-top: 20px
 		margin-bottom: 34px
 .input
 	&-row
@@ -97,20 +100,6 @@
 		font-size: 16px
 		line-height: 1.3
 		+tr(all .3s ease)
-	&-submit
-		font-size: 16px
-		padding: 15px 35px
-		color: #000000
-		border: 1px solid #dbcf1b
-		background-color: #fff233
-		border-radius: 5px
-		background-image: linear-gradient(#fff94e 0%, #ffeb18 100%)
-		box-shadow: 0px 5px 10px 0px rgba(107, 101, 7, 0.26)
-		+tr(all .3s ease)
-		&:hover
-			background-color: #fff94e
-		&:active
-			box-shadow: none
 	&-counter
 		&-nav
 			position: absolute
@@ -206,14 +195,38 @@
 			background-image: linear-gradient(#fcf728 0%, #e9c305 100%)
 			opacity: 0
 			+tr(all .3s ease)
-
+	+r(768)
+		&-wrapper
+			border-top-left-radius: 5px
+			border-bottom-left-radius: 5px
+			border-top-right-radius: 5px
+			border-bottom-right-radius: 5px
+			margin-right: 10px
+			margin-bottom: 10px
+			.radio-label
+				border-top-left-radius: 5px
+				border-bottom-left-radius: 5px
+				border-top-right-radius: 5px
+				border-bottom-right-radius: 5px
+					
 .check-label
 	display: inline-block
+	vertical-align: middle
+	font-size: 14px
+	color: #767a7d
+	a
+		color: #000000
+		font-weight: bold
+		&::after
+			content: ' *'
 	input
 		display: none
 		&:checked + .check-label__custom .check-label__checked
 			opacity: 1
 	&__checked
+		display: width
+		width: 15px
+		height: 15px
 		position: absolute
 		top: 50%
 		left: 50%
@@ -228,6 +241,7 @@
 		border: 1px solid #cccccc
 		border-radius: 3px
 		margin-right: 15px
+		margin-bottom: 5px
 		background-color: #ffffff
 		+tr(all .3s ease)
 		position: relative
@@ -235,16 +249,6 @@
 			background-color: #fafafa
 			border-color: #000000
 			cursor: pointer
-	&__text
-		vertical-align: middle
-		display: inline-block
-		font-size: 14px
-		color: #767a7d
-		a
-			color: #000000
-			font-weight: bold
-			&::after
-				content: ' *'
 
 .disabled-field
 	border-color: #c3c3c3
@@ -258,3 +262,20 @@
 	color: #ed1c24
 	padding: 5px 0
 
+.button-submit
+	font-size: 16px
+	padding: 15px 35px
+	color: #000000
+	border: 1px solid #dbcf1b
+	background-color: #fff233
+	border-radius: 5px
+	background-image: linear-gradient(#fff94e 0%, #ffeb18 100%)
+	box-shadow: 0px 5px 10px 0px rgba(107, 101, 7, 0.26)
+	+tr(all .3s ease)
+	&:hover
+		background-color: #fff94e
+	&:active
+		box-shadow: none
+	&.disabled-field
+		box-shadow: none
+		opacity: .6
