--- a/src/sass/_modal.sass
+++ b/src/sass/_modal.sass
@@ -1,4 +1,5 @@
 /* modal */
+
 .modal-layout
 	position: fixed
 	left: 0
@@ -15,7 +16,8 @@
 	transition: opacity .5s .1s, visibility .5s .1s, background-color .5s .1s
 	contain: paint 
 	overflow-y: auto
-	+vertical
+	//+vertical
+	text-align: center
 	contain: paint 
 	overflow-y: auto
 	&.active
@@ -24,7 +26,6 @@
 		opacity: 1
 		transition-delay: 0s
 		& .modal-container
-			transform: translateY(0)
 			opacity: 1
 			transition-delay: .2s
 		& .consultation-modal
@@ -34,27 +35,45 @@
 		& .application-modal
 			transform: translateX(0)
 			opacity: 1
-		
+		& .modal-menu
+			transform: translateX(0)
+			opacity: 1
 .modal-container
+	margin-top: 50px
 	display: inline-block
-	vertical-align: middle 
+	// vertical-align: middle
+	text-align: left
 	+rem(min-width,320px)
-	+rem(max-width,741px)
-	width: 100%
+	width: auto
 	background-color: #ffffff
 	position: relative
-	transform: translateY(5%)
-	transition: transform .2s, opacity .2s
+	+tr(opacity .2s)
 	opacity: 0
 
-.modal-container-content
-	padding: 10px
-	text-align: left
+	&-content
+		padding: 10px
+		text-align: left
+	&-inner
+		position: relative
+		.pop-close
+			display: block
+			width: 19px
+			height: 19px
+			color: #000000
+			position: absolute
+			right: 20px
+			top: 20px
+			+tr(all .5s ease)
+			&:hover
+				cursor: pointer
+				transform: rotate(90deg)
 
 .consultation-modal
+	width: 100%
+	max-width: 714px
 	opacity: 0
 	animation-name: hide
-	animation-duration: 0.2s
+	animation-duration: 0.5s
 	animation-fill-mode: forwards
 
 @keyframes show
@@ -70,19 +89,30 @@
 		transform: scale3d(1, 1, 1)
 	100%
 		opacity: 0 
-		transform: scale3d(0.9, 0.9, 1)
+		transform: scale3d(0.8, 0.8, 1)
 
 .application-modal
+	width: 100%
+	height: 100%
+	padding: 20px 70px 70px 80px
+	max-width: 873px
 	background-color: #ffffff
 	position: absolute
 	top: 0
 	right: 0
+	margin-top: 0
 	transform: translateX(20%)
 	opacity: 0
 	transition: all 0.3s cubic-bezier(0.25, 0.5, 0.5, 0.9)
 	animation-name: none
-
-
+	.form-block
+		background-color: #ffffff
+		&__footer
+			background-color: #ffffff
+	+r(850)
+		padding: 20px 30px 70px 30px
+	+r(640)
+		padding: 20px 0 70px 0
 .contents-modal
 	max-width: 690px
 	& .pop-close
@@ -134,5 +164,157 @@
 	& .contents-slider
 		width: 90%
 
-.sertificates-modal
-	padding-bottom: 50px
+.modal-menu
+	background-color: #ffffff
+	width: 100%
+	height: 100%
+	margin-top: 0
+	max-width: 1094px
+	position: fixed
+	top: 0
+	left: 0
+	z-index: 100
+	opacity: 0
+	transform: translateX(-20%)
+	transition: all 0.3s cubic-bezier(0.25, 0.5, 0.5, 0.9)
+	+r(980)
+		transform: translateX(20%)
+	&-inner
+		display: flex
+		flex-wrap: wrap
+		align-items: flex-start
+		width: 100%
+		height: 100%
+		padding: 59px 68px 35px 130px
+	&-body
+		+vertical
+		width: 100%
+		text-align: left
+		display: flex
+		flex-wrap: wrap
+		align-items: flex-start
+	.pop-close
+		display: block
+		width: 20px
+		height: 20px
+		color: #000000
+		position: absolute
+		top: 20px
+		right: 20px
+		+tr(all .5s ease)
+		&:hover
+			cursor: pointer
+			transform: rotate(90deg)
+	&__header
+		margin-bottom: 10px
+		width: 100%
+	&__nav
+		display: flex
+		justify-content: space-between
+		flex-wrap: wrap
+		margin-bottom: 65px
+		width: 100%
+		a
+			display: block
+	&__menu
+		width: 31%
+		a
+			font-weight: bold
+			color:#000000
+			font-size: 18px
+			line-height: 1.5
+			margin-bottom: 30px
+			+tr(color .3s ease)
+			&:hover
+				color: #ecdc00
+		&_lvl
+			padding-left: 32px
+			a
+				margin-bottom: 11px
+	&__sub-menu
+		border-top: 1px solid #cccccc
+		// margin-top: 18px
+		padding-top: 16px
+		a
+			font-weight: normal
+			color: #767a7d
+			font-size: 16px
+			line-height: 1.5
+			margin-bottom: 16px
+			+tr(color .3s ease)
+			&:hover
+				color: #000000
+	&__contacts
+		width: 100%
+		display: flex
+		justify-content: space-between
+		flex-wrap: wrap
+	&__info
+		width: 31%
+		&_lvl
+			padding-left: 32px
+	&__link-wrap
+		font-size: 20px
+		line-height: 1.2
+		font-weight: bold
+		letter-spacing: -0.02em
+		margin-bottom: 10px
+		a
+			color: #000000
+	&__mail-wrap
+		font-size: 16px
+		line-height: 1.5
+		a
+			color: #000000
+	&__c-title
+		margin-bottom: 15px
+		&_inner
+			margin-top: 30px
+			margin-bottom: 10px
+	+r(1024)
+		&-inner
+			padding: 45px 38px 15px 60px
+	+r(768)
+		overflow-y: scroll
+		&-inner
+			padding: 45px 25px 15px 40px
+		&__nav
+			width: 50%
+			padding-right: 20px
+		&__contacts
+			width: 50%
+			padding-left: 20px
+		&__menu
+			width: 100%
+			&_lvl
+				padding: 0
+				margin-bottom: 30px
+		&__sub-menu
+			display: none
+		&__info
+			width: 100%
+			&_lvl
+				padding: 0
+			&_empty
+				display: none
+	+r(620)
+		&-inner
+			padding: 52px 16px 30px 16px
+		&__close-btn
+			top: 19px
+			right: 19px
+		&__header
+			margin-bottom: 50px
+		&__nav
+			width: 100%
+			padding: 0
+			padding-left: 40px
+			margin-bottom: 0
+		&__contacts
+			width: 100%
+			padding: 0
+			padding-left: 44px
+			margin-bottom: 50px
+		&__info
+			&_lvl
+				margin-top: 20px
